@@ -144,4 +144,7 @@ getChecksumFile.default getChecksumFileSet
 getChecksumFileSet.GenericDataFileSet getMainFile
 getMainFile.ChecksumFile isOld isOld.ChecksumFile
 validate.ChecksumFileSet
-
+findDuplicated.GenericDataFileSet
+duplicated.GenericDataFileSet
+anyDuplicated.GenericDataFileSet
+unique.GenericDataFileSet
